# example-dvc-experiments

./: dvclive.json  metrics.json  params.yaml  pyproject.toml
dvclive/: report.html
dvclive/scalars/eval/: acc.tsv  loss.tsv
dvclive/scalars/train/: acc.tsv  loss.tsv
plots/: confusion.csv
